# serverless-python-requirements-issue-437

./: .gitignore  README.md  package.json  pyproject.toml  serverless.yml  setup.cfg
