[tool.poetry]
name = "serverless-python-requirements-issue-437"
version = "1.0.0"
description = "Minimum project to replicate UnitedIncome/serverless-python-requirements/issues/437"
authors = ["Noel Llevares <noelmartin@gmail.com>"]

[tool.poetry.dependencies]
dulwich = "0.19.14"
paramiko = "^2.7.1"
pymysql = "^0.10.0"
python = "^3.8"
pypika = "^0.38.0"
pygithub = "1.51"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
ipython = "^7.17.0"
mypy = "^0.782"
pygments = "^2.6.1"
pytest = "^6.0.1"
pytest-cov = "^2.10.0"
pytest-freezegun = "^0.4.2"
pytest-mock = "^3.2.0"
snapshottest = "^0.5.1"
autopep8 = "^1.5.4"
boto3 = "^1.14.34"

[tool.black]
target-version = ['py38']
line-length = 100
include = '\.pyi?$'
exclude = '/(\.git|\.mypy_cache|node_modules|snapshots)/'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
